projekt/kubectl-development/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: development
  name: backend

spec:
  selector:
    matchLabels:
      tier: backend

  replicas: 2
  template: 
    metadata:
      labels: 
        tier: backend
    spec:
     containers:
     - name: backend
       image: mpolom/backend:dev-0.1
