projekt/kubectl-development/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: development
  name: frontend

spec:
  selector:
    matchLabels:
      tier: frontend

  replicas: 1
  template: 
    metadata:
      labels: 
        tier: frontend
    spec:
      containers:
      - name: front
        image: mpolom/frontend:dev-0.1
        volumeMounts:
          - name: config
            mountPath: "/usr/share/nginx/html/config.js"
            subPath: "config.js"
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          configMap:
              name: frontend-config
              items:
                  - key: "web.properties"
                    path: "config.js"
