projekt/kubectl-development/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: development
  name: mongo-db
  labels:
    app: mongodb
    type: db

spec:
  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongodb
        type: db

    spec: 
      containers:
        - name: mongo-container
          image: mongo:latest
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-volume
              subPath: mongo
      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
           
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      type: db
