projekt/kubectl-development/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: frontend-service

spec:
  selector:
    tier: frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
